<resources>
    <string name="app_name">ReflexIon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="hello">Hello</string>
    <string name="add_work_here">Add work here</string>
    <string name="save">Save</string>
    <string name="what_i_did_today">What I did today</string>
    <string name="reset">Reset</string>
    <string name="_5">4</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="my_reflective_log">My Reflective Log</string>
    <string name="date_today">Date today</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="continue_signing_in">Continue signing in</string>
    <string name="no_tasks_added_as_of_now">No tasks added as of now.</string>
    <string name="reflex">ReflexIon</string>


    <!--    Placeholder for task sharing-->
    <string name="placeholder_share">Here is my task list for the date $s:\n$s\n And I gave myself $s stars</string>

</resources>
