<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.AddNoteFragment">


        <TextView
            android:id="@+id/tv1"
            style="@style/textHeaadingNoteStyle"
            android:text="@string/what_i_did_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_2x"
            android:hint="@string/add_work_here"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            tools:text="@tools:sample/lorem/random" />

        <RatingBar
            android:id="@+id/rating_add"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_description" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtn_save"
            style="@style/buttonAttributesStyle"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtn_reset"
            style="@style/buttonAttributesStyle"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mbtn_save" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>